@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix multiplayer desync when a player joins before Milestones' intro message
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2021-06-23
